使用floatingSearchView前提交

--- a/yellowpages/src/main/AndroidManifest.xml
+++ b/yellowpages/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:name=".App"
         >
         <activity android:name=".HomeActivity" android:theme="@style/yp_AppTheme"/>
+        <activity android:name=".SearchActivity" android:theme="@style/yp_AppTheme"/>
     </application>
 
 </manifest>
