--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -41,7 +41,11 @@ dependencies {
 //    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     //动画
-    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+    compile 'com.daimajia.easing:library:2.0@aar'
+    compile 'com.daimajia.androidanimations:library:2.2@aar'
+
+    //搜索框
+    compile 'com.github.arimorty:floatingsearchview:2.0.3'
 
     //日志
     compile 'com.orhanobut:logger:1.15'
