--- a/yellowpages/src/main/AndroidManifest.xml
+++ b/yellowpages/src/main/AndroidManifest.xml
@@ -12,5 +12,6 @@
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
 </manifest>
