--- a/yellowpages/build.gradle
+++ b/yellowpages/build.gradle
@@ -30,7 +30,7 @@ android {
         targetGenDir'src/main/java'
     }
 
-//    resourcePrefix 'yp'
+    resourcePrefix 'yp'
 
 }
 
@@ -41,8 +41,38 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.0'
     testCompile 'junit:junit:4.12'
-    compile project(':commons')
+
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    testCompile 'junit:junit:4.12'
+
+
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+
+    //注解
+    compile 'com.jakewharton:butterknife:8.5.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+    //动画
+    compile 'com.daimajia.easing:library:2.0@aar'
+    compile 'com.daimajia.androidanimations:library:2.2@aar'
+
+    //搜索框
+    compile 'com.github.arimorty:floatingsearchview:2.0.3'
+
+    //日志
+    compile 'com.orhanobut:logger:1.15'
+
+    //网络
+    compile 'io.reactivex:rxjava:1.1.5'
+    compile 'io.reactivex:rxandroid:1.2.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+    compile 'com.squareup.okhttp3:okhttp:3.0.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+
+    //存储
+    compile 'com.orhanobut:hawk:2.0.1'
     compile 'org.greenrobot:greendao:3.2.0'
 
 
